# DRAS-5

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIGURE_MANIFEST.csv  README.md  REPRODUCIBILITY.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.md/: README.md
docs/: README.md
dras5/: __init__.py  audit.py  cli.py  constraints.py  decay.py  simulator.py  state_machine.py  states.py
notebooks/: 01_state_machine_basics.ipynb  02_advanced_governance_workflows.ipynb
results/: c5_outcomes.csv  latency.csv  mer_by_type.csv  ml_wrapper.csv  oer_by_truelevel.csv  oer_by_type.csv  summary.json
scripts/: demo.py  generate_figures.py  generate_manuscript_manifest.py  run_all.py  timeout_demo.py
src/dras5/: __init__.py  audit.py  cli.py  constants.py  constraints.py  decay.py  simulator.py  state_machine.py  states.py  transitions.py
tests/: test_audit.py  test_constraints.py  test_decay.py  test_simulator.py  test_state_machine.py  test_states.py  test_units.py
