[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dras5"
version = "1.0.0"
description = "DRAS-5: Dynamic Risk Assessment State Machine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dras5*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
